--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" :"nodemon app.js",
-    "start-server" : "node app.js"
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
   "author": "soumyajit",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.0",
     "mongoose": "^5.9.20",
     "nodemon": "^2.0.4"
   }
